changed html name

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Big Poppa Code React Starter Kit</title>
+  <title>Code Buddies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.89f745187309a3bec3ee.js?16e1668ee6dde25bedf3"></script><script defer src="js/dist/App.877b5bc760e4ec2106a7.js?16e1668ee6dde25bedf3"></script><script defer src="js/dist/main.79696413517eae1629de.js?16e1668ee6dde25bedf3"></script></head>
+<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.89f745187309a3bec3ee.js?5526d6791a62e8637704"></script><script defer src="js/dist/App.877b5bc760e4ec2106a7.js?5526d6791a62e8637704"></script><script defer src="js/dist/main.79696413517eae1629de.js?5526d6791a62e8637704"></script></head>
 
 <body>
   <div id="app"></div>
